--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Yassine-slimani-technical-test</string>
+    <string name="app_name">GUIDOMIA</string>
+    <string name="main_activity_header_title">Tacoma 2021</string>
+    <string name="main_activity_header_subtitle">Get your\'s now</string>
+
 </resources>
