--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,11 @@
     <string name="main_activity_filters_title">Filters</string>
     <string name="main_activity_filters_make_hint">Any make</string>
     <string name="main_activity_filters_model_hint">Any model</string>
+    <string name="main_activity_recycler_view_item_title">Alpine roadster</string>
+    <string name="main_activity_recycler_view_item_price">Price : 120K</string>
+    <string name="main_activity_recycler_view_item_pros_title">Pros :</string>
+    <string name="main_activity_recycler_view_item_cons_title">Cons :</string>
+
+
 
 </resources>
